use mutex before touching maBuffered2DDecomposition (tdf#131595 related)

Otherwise we could be reading stale data.

And change it to return a bool, the call-sites only care if we
have/dont-have the data, and returning a value of a field that should only
be accessed under a lock is dodgy.

And move the the setRemainingTime call to get2DDecomposition(), because
that where we really "use" the data ie. paint with it.

Change-Id: Ie795465a1177a47f846cf9310d419079e52b8770
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182908
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>