drawinglayer/source/primitive2d/shadowprimitive2d.cxx
@@ -313,7 +313,7 @@ void ShadowPrimitive2D::get2DDecomposition(
                                        fDiscreteBlurRadius, rViewInformation))
         return;
 
-    if (!getBuffered2DDecomposition().empty())
+    if (hasBuffered2DDecomposition())
     {
         // First check is to detect if the last created decompose is capable
         // to represent the now requested visualization (see similar
@@ -340,7 +340,7 @@ void ShadowPrimitive2D::get2DDecomposition(
         }
     }
 
-    if (!getBuffered2DDecomposition().empty())
+    if (hasBuffered2DDecomposition())
     {
         // Second check is to react on changes of the DiscreteSoftRadius when
         // zooming in/out (see similar implementation at ShadowPrimitive2D).
@@ -365,7 +365,7 @@ void ShadowPrimitive2D::get2DDecomposition(
         }
     }
 
-    if (getBuffered2DDecomposition().empty())
+    if (!hasBuffered2DDecomposition())
     {
         // refresh last used DiscreteBlurRadius and ClippedRange to new remembered values
         const_cast<ShadowPrimitive2D*>(this)->mfLastDiscreteBlurRadius = fDiscreteBlurRadius;
